<!--
  ~ Copyright 2016 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">FriendlyPix</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="server_client_id">85010793512-5t8ejsijkp68vgudb9jn00ct1tnrgoac.apps.googleusercontent.com</string>
    <string name="server_widget_url">http://www.google.com</string>

    <string name="title_activity_feeds">FeedsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="server_client_id_web">85010793512-guh26t71dh519hp1il371it4bq4kil0h.apps.googleusercontent.com</string>
    <string name="project_id">friendlypix-4fa22</string>
    <string name="title_activity_welcome">FriendlyPix</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_screen_text">Welcome to FriendlyPix</string>
    <string name="explore_button_text">explore</string>
    <string name="sign_in_button_text">sign in</string>
    <string name="sign_out_button_text">sign out</string>
    <string name="show_feed_button_text">show feed</string>
    <string name="drawer_profile_title">Profile</string>
    <string name="drawer_settings_title">Settings</string>
    <string name="drawer_your_feed_title">Your Feed</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="title_activity_new_post">New Post</string>
    <string name="invite_friends_button_text">Invite your friends</string>
    <string name="my_posts_button_text">My posts</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="follow_user_error">Unable to follow user.</string>
    <string name="picture_chooser_title">Select or take picture to post</string>
    <string name="new_comment_hint">Enter new comment</string>
    <string name="new_post_location_placeholder">Getting location...</string>
    <string name="user_info_no_name">Unknown user</string>
    <string name="error_required_field">Required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_upload_task_create">Couldn\'t create upload task.</string>
    <string name="default_progress_message">Please wait...</string>
    <string name="profile_progress_message">Signing in...</string>
    <string name="post_upload_progress_message">Uploading...</string>
    <string name="user_logged_out_error">You must be logged in to do that.</string>
    <string name="error_user_not_signed_in">Error user not signed in.</string>
</resources>
