<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_profile"
            android:checked="true"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/drawer_profile_title"/>
        <item
            android:id="@+id/drawer_your_feed"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/drawer_your_feed_title"/>
        <item
            android:id="@+id/drawer_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/drawer_settings_title"/>

    </group>

</menu>